# yaitec-hub-templates

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
crewai-templates/sequential-agent-tools/: hello.py  main.py  pyproject.toml
crewai-templates/simple-sequential-agent/: README.md  main.py  pyproject.toml
langchain-templates/langchain-agentic-rag/: main.py  pyproject.toml
langchain-templates/langchain-output-parsers/pydantic-output-parser/: README.md  main.py  pyproject.toml
langchain-templates/langchain-simple-rag/: main.py  pyproject.toml
langchain-templates/langchain-starter-example/: main.py  pyproject.toml
langflow-workflows/Data2Speech/: Data to Speech (Langflow) (2).json  README.md
langflow-workflows/Langflow-Newsletter/: Langflow Newsletter Generator.json  README.md
langflow-workflows/Skeleton-of-Thoughts/: README.md  Skeleton of Thought Flow - LF 1.1.json
langgraph-templates/sql-agent-workflow/: .gitignore  README.md  db_visualize.py  main.py  pyproject.toml
